# anarchy

./: .dockerignore  Cargo.toml  Dockerfile  input.anarchy
anarchy_cli/: Cargo.toml
anarchy_cli/src/: main.rs
anarchy_core/: Cargo.toml
anarchy_core/src/: anarchy.pest  lib.rs
anarchy_gui/: Cargo.toml
anarchy_gui/src/: main.rs
anarchy_web/: Cargo.toml  README.md
anarchy_web/src/: lib.rs
anarchy_web/www/: App.css  App.tsx  index.html  index.ts  input.anarchy  package.json  pnpm-lock.yaml  syntax.ts  tsconfig.json  webpack.config.js  worker.ts  workerRef.ts  workerTypes.ts
src/: main.rs
