[package]
name = "anarchy_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anarchy_core = { path = "../anarchy_core" }
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.88"

[lib]
crate-type = ["cdylib", "rlib"]
